tests/snapshots/insta_test__string_literal-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: Declaration(
                Declaration {
                    ty_spec: Int,
                    init_declarator: Some(
                        InitDeclarator {
                            declarator: Declarator {
                                n_star: 0,
                                direct_declarator: Func(
                                    Ident(
                                        "printf",
                                    ),
                                    [
                                        Declaration {
                                            ty_spec: Char,
                                            init_declarator: Some(
                                                InitDeclarator {
                                                    declarator: Declarator {
                                                        n_star: 1,
                                                        direct_declarator: Ident(
                                                            "msg",
                                                        ),
                                                    },
                                                    initializer: None,
                                                },
                                            ),
                                            pos: DebugInfo {
                                                pos: Position {
                                                    n_char: 15,
                                                    n_line: 1,
                                                },
                                            },
                                        },
                                    ],
                                    false,
                                ),
                            },
                            initializer: None,
                        },
                    ),
                    pos: DebugInfo {
                        pos: Position {
                            n_char: 4,
                            n_line: 1,
                        },
                    },
                },
            ),
            pos: DebugInfo {
                pos: Position {
                    n_char: 4,
                    n_line: 1,
                },
            },
        },
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Char,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 1,
                                                    direct_declarator: Ident(
                                                        "msg",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: StrLit(
                                                                "Hello World",
                                                            ),
                                                            pos: DebugInfo {
                                                                pos: Position {
                                                                    n_char: 20,
                                                                    n_line: 4,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Func(
                                            "printf",
                                            [
                                                Expr {
                                                    kind: LVar(
                                                        "msg",
                                                    ),
                                                    pos: DebugInfo {
                                                        pos: Position {
                                                            n_char: 15,
                                                            n_line: 5,
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 5,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            pos: DebugInfo {
                pos: Position {
                    n_char: 4,
                    n_line: 3,
                },
            },
        },
    ],
}
