tests/snapshots/insta_test__string_literal.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 14,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 20,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 21,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 24,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 25,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 12,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 4,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 13,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 14,
                n_line: 4,
            },
        },
    },
    Token {
        kind: BinOpEq(
            Eq,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 18,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Str(
            "Hello World",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 20,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 33,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 8,
                n_line: 5,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 14,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 15,
                n_line: 5,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 18,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Semi,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 19,
                n_line: 5,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 4,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Eof,
        debug_info: DebugInfo {
            file_info: ,
            pos: Position {
                n_char: 3,
                n_line: 7,
            },
        },
    },
]
